<resources>
    <string name="app_name">Shaheer</string>
    <string name="logout_msg">are you sure you want logout ?</string>
    <string name="logout">logout</string>
    <string name="ignore">ignore</string>
    <string name="error_connection">error connection</string>
    <string name="reload">reload</string>
    <string name="no_item">no items</string>
    <string name="check_mail">check email field</string>
    <string name="check_error">check error</string>
    <string name="check_pass">check pass field</string>
    <string name="error_match">error match</string>
    <string name="yes">yes</string>
    <string name="alert">alet</string>
    <string name="gps_msg">please open your GPS message</string>
    <string name="ok">ok</string>
    <string name="check_phone">check your phone field</string>
    <string name="copied">copied</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forget_password">forget password</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="login_hint">please login to continue using our app</string>
    <string name="login_now">Login now</string>
    <string name="phone">phone</string>
    <string name="invalid_pass">invalid pass</string>
    <string name="helper_phone">Ex:050111111111</string>
    <string name="helper_pass">password more than 5 letters</string>
    <string name="forget_hint">please enter your phone to receive verification code</string>
    <string name="enter_verif_msg">Enter code that sent to your mobile</string>
    <string name="resend_code">resend code</string>
    <string name="edit_number">تعديل الرقم</string>
    <string name="verify">verify</string>
    <string name="reset_pass">reset password</string>
    <string name="ver_code">verification code</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="helper_ver">the code more than 3 letters</string>
    <string name="send">send</string>
    <string name="check_ver">check verification code</string>
    <string name="register_hint">please create an account to start using our app</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="terms_privacy"><![CDATA[Terms of use & privacy policy]]></string>
    <string name="helper_name">the name should be more than 3 letters</string>
    <string name="helper_mail">email be like example@example.com</string>
    <string name="getting_start">Get Started Now</string>
    <string name="or">or</string>
    <string name="continue_face_btn">continue with facebook</string>
    <string name="Existing_user">existing user ?</string>
    <string name="connect">connect</string>
    <string name="follow">follow</string>
    <string name="following">following</string>
    <string name="unfollow">unfollow</string>
    <string name="feed">feed</string>
    <string name="services">services</string>
    <string name="inbox">inbox</string>
    <string name="profile">profile</string>
    <string name="manage_wallet">manage wallet</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="you_retweeted">you retweeted</string>
    <string name="add_cart">add to cart</string>
    <string name="sorry_no_posts">sorry you don\'t have any posts yet</string>
    <string name="empty_followers">you don\'t have followers yet</string>
    <string name="pin_post">pin post</string>
    <string name="delete_post">delete post</string>
    <string name="unpin">unpin post</string>
    <string name="cancel">cancel</string>
    <string name="confirm_pin">confirm pin post</string>
    <string name="confirm_delete">are you sure delete this post ?</string>
    <string name="delete">delete</string>
    <string name="pinned_post">pinned post</string>
    <string name="follow_user">follow this user</string>
    <string name="mute_user">mute user</string>
    <string name="block_user">block this user</string>
    <string name="report">report this user</string>
    <string name="unfollow_user">unfollow this user</string>
    <string name="report_user">report user</string>
    <string name="write_reason">write the reason ...</string>
    <string name="save">save</string>
    <string name="empty_field">empty field</string>
    <string name="mute_title">are you sure mute this user ?</string>
    <string name="confirm">confirm</string>
    <string name="confirm_block">are you sure block this user ?</string>
    <string name="reply">reply</string>
    <string name="like">like</string>
    <string name="write_comment">write a comment...</string>
    <string name="comments">comments</string>
    <string name="now">now</string>
    <string name="liked">liked</string>
    <string name="show_more_replies">show %d more reply...</string>
    <string name="replies">replies</string>
    <string name="edit_profile">edit personal information</string>
    <string name="bio">bio</string>
    <string name="gender">gender</string>
    <string name="occupations">occupations</string>
    <string name="save_changes">save changes</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="invalid_name">invalid name</string>
    <string name="invalid_phone">invalid phone</string>
    <string name="based_follow">because you follow</string>
    <string name="more">more</string>
    <string name="and_other">and others</string>
    <string name="dead_line">deadline : %d days</string>
    <string name="video_hint">15 second per video with a maximum of 20 clips connected or completly separated</string>
    <string name="add_to_cart">added to cart successfully</string>
    <string name="post_infotmation">Post information</string>
    <string name="post">post</string>
    <string name="letters_num">280 letters</string>
    <string name="write_short_desc">write a short description</string>
    <string name="tag">Tag</string>
    <string name="price">price</string>
    <string name="deadline">deadline</string>
    <string name="call">call</string>
    <string name="video">video</string>
    <string name="add">add</string>
    <string name="add_post">add post</string>
    <string name="error_content">error content empty</string>
    <string name="error_category">error no category selected</string>
    <string name="featured_stories">featured stories</string>
    <string name="viewers">viewers</string>
    <string name="sure_story">are you sure you want delete this story ?</string>
    <string name="no_viewers">no viewers yet</string>
    <string name="sold">sold</string>
    <string name="bought">bought</string>
    <string name="collection">collection</string>
    <string name="requested">requested</string>
    <string name="inprogress">in progress</string>
    <string name="completed">completed</string>
    <string name="accept_order">accept order</string>
    <string name="cancel_order">cancel order</string>
    <string name="finish_order">finish order</string>
    <string name="deadline_">"deadline : "</string>
    <string name="rate">rate</string>
    <string name="retweet">retweet</string>
    <string name="report_">report</string>
    <string name="canceled">canceled</string>
    <string name="delete_order">delete order</string>
    <string name="title">title</string>
    <string name="report_order">report order</string>
    <string name="sure_delete_order">are you sure want delete ?</string>
    <string name="rate_order">rate order</string>
    <string name="rate_user">rate user</string>
    <string name="ordered">ordered</string>
    <string name="share">share</string>
    <string name="select_all">select all</string>
    <string name="remove">remove</string>
    <string name="total">Total</string>
    <string name="check_out">proceed to checkout</string>
    <string name="sar">SAR</string>
    <string name="cart_empty">your cart is empty</string>
    <string name="cart">Cart</string>
    <string name="apply">apply</string>
    <string name="coupon_code">coupon code</string>
    <string name="select_item">please select item to confirm order</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="settings">settings</string>
    <string name="bookmarks">bookmarks</string>
    <string name="tickets">tickets</string>
    <string name="faqs">faqs</string>
    <string name="terms">terms</string>
    <string name="privacy">privacy</string>
    <string name="sign_out">sign out</string>
    <string name="main">main</string>
    <string name="notifications">notifications</string>
    <string name="language_settings">language</string>
    <string name="block_list">block list</string>
    <string name="lock_account">lock account</string>
    <string name="app_language">app language</string>
    <string name="current_pass">current password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="change_password">change password</string>
    <string name="error_password">please type strong pass more than 4 letters</string>
    <string name="blocked">blocked</string>
    <string name="freq_answered_questions">frequentely asked questions</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="menu">menu</string>
    <string name="block_hint">you didn\'t block any one</string>
    <string name="ticket">Ticket</string>
    <string name="subject">subject:</string>
    <string name="details">Details:</string>
    <string name="satisfied">"are you Satisfied ? "</string>
    <string name="no">No</string>
    <string name="ticket_details">ticket details</string>
    <string name="answer">Answer:</string>
    <string name="no_services">there is no service</string>
    <string name="messages">messages</string>
    <string name="helps">helps</string>
    <string name="no_quest">there is no questions</string>
    <string name="quest_answer">question answer</string>
    <string name="sent_attachment">sent attachment</string>
    <string name="no_messages">there is no messages</string>
    <string name="write_msg_hint">write your message ...</string>
    <string name="chat">chat</string>
    <string name="search_history">search history</string>
    <string name="search">search</string>
    <string name="people">people</string>
    <string name="no_search_result">no search result</string>
    <string name="search_result">search result</string>
    <string name="price_range">price range</string>
    <string name="options">options</string>
    <string name="tags">Tags</string>
    <string name="rating">Rating</string>
    <string name="apply_filter">apply filter</string>
    <string name="filter">filter</string>
    <string name="new_messages">new messages</string>
    <string name="no_search_res">no search result</string>
    <string name="search_hint_user">search user ...</string>
    <string name="copy_link">copy link</string>
    <string name="bookmark">bookmark</string>
    <string name="sent_successfully">sent successfully</string>
    <string name="bookmarked_successfully">bookmarked successfully</string>
    <string name="unbookmarked">reomved from bookmarks</string>
    <string name="sure_mute">are you sure mute this user ?</string>
    <string name="see_first">you will get notifications from this user with latest posts</string>
    <string name="connecting">connecting...</string>
    <string name="connected">connection established</string>
    <string name="lost_connection">lost connection</string>
    <string name="order">order now</string>
    <string name="search_hint_">search hint...</string>
    <string name="empty_data">empty data</string>
    <string name="unmute_user">unmute user</string>
    <string name="unblock_user">unblock user</string>
</resources>