<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBg"
    tools:context=".ui.activity.main.ui.cart.CartActivity">
<include
    layout="@layout/toolbar_normal"
    />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        app:cardElevation="4dp"
        app:cardCornerRadius="@dimen/margin_normal"
        >
        <LinearLayout
            android:id="@+id/empty_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/empty_box"
                app:tint="@color/colorAccent" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_empty"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textsize"
            android:textStyle="bold"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cart_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_all"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:checked="false"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/my_check"
            android:layout_margin="@dimen/margin_normal"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all"
                android:layout_gravity="center"
                android:textSize="@dimen/textsize2"
                />

        </LinearLayout>
            <TextView
                android:id="@+id/tv_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:padding="@dimen/padding_med"
                android:enabled="false"
                android:alpha="0.5"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:textSize="@dimen/textsize2"
                />

        </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="@android:color/darker_gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_coupon"
                android:layout_margin="@dimen/margin_normal"
                >
                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/coupon_code"
                    android:textSize="@dimen/textsize2"
                    android:backgroundTint="@android:color/white"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/apply_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    app:cornerRadius="8dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:text="@string/apply"
                    android:textSize="@dimen/textsize3"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/total"
                    android:textSize="@dimen/textsize2"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/textsize2"
                    android:text="0"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginLeft="@dimen/margin_normal"
                    />
            </RelativeLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/proceed_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order"
                android:textSize="@dimen/textsize3"
                android:layout_margin="@dimen/margin_normal"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>