<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:layout_margin="@dimen/margin_normal"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <TextView
            android:id="@+id/tv_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/cairo_bold"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize1"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/sign_out"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="@font/cairo_regular"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize2"
            android:layout_marginBottom="@dimen/margin_large"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/logout_msg"
            android:gravity="center"
            />
        <LinearLayout
            android:id="@+id/normal_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:background="#f2f6f8"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            >
            <TextView
                android:id="@+id/action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="4dp"
                android:textSize="@dimen/textsize3"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:text="@string/logout"
                android:layout_margin="@dimen/margin_large"
                />
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                />
            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="4dp"
                app:strokeColor="@color/colorPrimaryDark"
                android:textColor="@android:color/darker_gray"
                android:text="@string/cancel"
                android:fontFamily="@font/cairo_bold"
                android:textSize="@dimen/textsize3"
                app:strokeWidth="1dp"
                android:gravity="center"
                android:layout_margin="@dimen/margin_large"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/logout_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:gravity="center"
            android:visibility="gone"
            >

            com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            app:cornerRadius="4dp"
            android:visibility="invisible"
            app:strokeColor="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/ignore"
            app:strokeWidth="1dp"

            android:layout_margin="@dimen/margin_large"
            />
            <com.google.android.material.button.MaterialButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                app:strokeWidth="1dp"
                app:cornerRadius="4dp"
                app:strokeColor="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"            android:text="@string/logout"
                android:layout_margin="@dimen/margin_large"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>