<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_normal"
        app:cardBackgroundColor="@android:color/white"
        android:layout_marginBottom="-10dp"
        app:cardCornerRadius="@dimen/margin_large"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cancel_order"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/margin_large"
                android:textSize="@dimen/textsize1"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user"
                android:layout_width="40dp"
                android:layout_height="40dp"

                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@android:color/darker_gray"
                android:text="name"
                android:layout_marginBottom="@dimen/margin_small"
                android:textSize="@dimen/textsize2"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:inputType="textMultiLine"
                android:background="@drawable/comment_bg"
                android:backgroundTint="#f1f3f8"
                android:layout_margin="@dimen/margin_large"
                android:textSize="@dimen/textsize3"
                android:hint="@string/write_reason"
                android:gravity="top|start"
                android:padding="@dimen/padding_med"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/save"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>